test/prism_regression/invalid/for_invalid_index.rb
# typed: true
# disable-parser-comparison: true

for
def foo
end
